--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -1,9 +1,10 @@
 #+TITLE: Emacs Configuration via Org-mode
 #+AUTHOR: Mario Baars
+#+PROPERTY: header-args :tangle "~/.emacs.d/init.el"
 
 * Decluttering
 ** UI-Decluttering
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (setq inhibit-start-up-message 1)
 (tool-bar-mode -1)
 (menu-bar-mode -1)
@@ -11,17 +12,17 @@
 #+end_src
 
 ** Undo
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (setq undo-tree-history-directory-alist '(("." . "~/.emacs.d/undo")))
 #+end_src
 
 ** Saves Directory
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (setq backup-directory-alist '((".*" . "~/.emacs.d/.emacs_saves")))
 #+end_src
 
 ** Keeping Emacs clean
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (setq delete-old-versions t)
   (setq version-control t)
   (setq vc-make-backup-files t)
@@ -29,14 +30,14 @@
 #+end_src
 
 ** Custom File
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
 (when (file-exists-p custom-file)
   (load custom-file))
 #+end_src
 
 * Use Package
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (require 'package)
 (setq package-archives '(("melpa" . "https://melpa.org/packages/")
                          ("org" . "https://orgmode.org/elpa/")
@@ -55,7 +56,7 @@
 
 * Misc
 ** Which Key
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (use-package which-key
     :init (which-key-mode)
     :diminish which-key-mode
@@ -65,35 +66,35 @@
 #+end_src
 
 ** Stay keyboard driven
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (setq use-dialog-box nil)
 #+end_src
 
 ** Line numbers
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (global-display-line-numbers-mode t)
   (setq display-line-numbers 'relative)
 #+end_src
 
 ** Spaces instead of tabs
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (setq default-tab-width 4)
   (setq-default indent-tabs-mode nil)
 #+end_src
 
 ** Electric pair mode
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (electric-pair-mode t)
 (setq-default electric-pair-inhibit-predicate 'electric-pair-conservative-inhibit)
 #+end_src
 
 ** Disable auto indenting
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (when (fboundp 'electric-indent-mode) (electric-indent-mode -1))
 #+end_src
 
 ** Scrolling
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (setq auto-window-vscroll nil)
 (customize-set-variable 'fast-but-imprecise-scrolling t)
 (customize-set-variable 'scroll-conservatively 101)
@@ -102,52 +103,57 @@
 #+end_src
 
 ** Recentf
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (recentf-mode 1)
 #+end_src
 
 ** Save-hist
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (setq history-length 25)
   (savehist-mode 1)
 #+end_src
 
 ** Short answers
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (if (boundp 'use-short-answers)
     (setq use-short-answers t)
   (advice-add 'yes-or-no-p :overide #'y-or-n-p))
 #+end_src
 
 ** Reverting buffers
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (customize-set-variable 'global-auto-revert-non-file-buffers t)
 (global-auto-revert-mode 1)
 #+end_src
 
 ** Docview
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (setq doc-view-resolution 200) 
 #+end_src
 
 ** Winner mode
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (winner-mode t)
 #+end_src
 
 ** Compilation
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (setq compilation-scroll-output t)
 #+end_src
 
 ** Easy closing *Help*
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (setq help-window-select t)
+#+end_src
+
+** Minibuffer Window Height
+#+begin_src emacs-lisp 
+(setq max-mini-window-height 0.10)
 #+end_src
 
 * Key bindings
 ** Window manipulation
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (global-set-key (kbd "C-S-h") 'windmove-swap-states-left)
   (global-set-key (kbd "C-S-j") 'windmove-swap-states-down)
   (global-set-key (kbd "C-S-k") 'windmove-swap-states-up)
@@ -165,7 +171,7 @@
 #+end_src
 
 ** Random Keybindings
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (global-set-key (kbd "M-n") 'dabbrev-expand)
   (global-set-key (kbd "C-x d") 'ido-dired)
   (global-set-key (kbd "C-x C-f") 'ido-find-file)
@@ -173,12 +179,12 @@
 #+end_src
 
 ** No accidental quiting
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (global-unset-key "\C-x\C-c")
 #+end_src
 
 * Evil Mode
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (use-package evil
     :ensure t
     :init
@@ -195,20 +201,20 @@
 
 ** Undo-Tree
 Evil mode needs undo-tree for undo capability
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package undo-tree)
   (global-undo-tree-mode t)
   (setq evil-undo-system 'undo-tree)
 #+end_src
 
 * Extending Path
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (setq exec-path (append exec-path '("/home/mario/.local/bin")))
 #+end_src
 
 * Appearance
 ** Font
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (defvar default-font-size 200)
 
   (defun set-font-faces()
@@ -226,13 +232,13 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 ** Theme
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (use-package doom-themes)
 (load-theme 'doom-tokyo-night)
 #+end_src
 
 ** Modeline
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (use-package doom-modeline
   :init (doom-modeline-mode 1)
   :custom ((doom-modeline-height 18)))
@@ -253,7 +259,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * Counsel
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package counsel
     :ensure t
     :custom
@@ -263,7 +269,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * Consult
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package consult
     :bind
     (("C-x b" . consult-buffer)
@@ -283,13 +289,13 @@ Evil mode needs undo-tree for undo capability
 
 * Completion
 ** Company
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package company)
   (global-company-mode t)
 #+end_src
 
 ** Vertico 
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package vertico
     :ensure t
     :init
@@ -303,7 +309,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 ** Orderless
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package orderless
     :init
     (setq completion-styles '(orderless flex basic)
@@ -312,7 +318,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 ** Marginalia
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (use-package marginalia
   :ensure t
   :config
@@ -320,18 +326,18 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 ** Completion Style
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (setq completion-styles '(orderless))
 #+end_src
 
 ** Corfu
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package corfu)
   (global-corfu-mode t)
 #+end_src
 
 * Dired
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package diredfl :ensure t
     :config
     (add-hook 'dired-mode-hook 'diredfl-mode))
@@ -344,7 +350,7 @@ Evil mode needs undo-tree for undo capability
 
 * Org mode
 ** Basic Org mode setup
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (defun org-mode-setup ()
     (org-indent-mode)
     (visual-line-mode 1))
@@ -387,24 +393,24 @@ Evil mode needs undo-tree for undo capability
   (with-eval-after-load 'org
     (require 'org-tempo)
     (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
-    (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp :tangle init.el"))
+    (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp "))
     (add-to-list 'org-structure-template-alist '("py" . "src python")))
 #+end_src
 
 * Vterm
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (use-package vterm)
 (use-package multi-vterm)
 #+end_src
 
 * Tramp
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (require 'tramp)
 (setq tramp-default-method "ssh")
 #+end_src
 
 * Fuzzyfinder
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package fzf
     :bind
     :config
@@ -421,7 +427,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * Embark
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package embark
     :ensure t
     :bind
@@ -445,7 +451,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * EXWM
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
   (start-process-shell-command "xrandr" nil "")
 
   (use-package counsel
@@ -513,13 +519,13 @@ Evil mode needs undo-tree for undo capability
 
 * Text Editing
 ** flycheck
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package flycheck)
   (global-flycheck-mode 1)
 #+end_src
 
 ** lsp-mode
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package lsp-ui
     :ensure
     :commands lsp-ui-mode
@@ -539,7 +545,7 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 ** projectile
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package projectile
     :ensure t
     :bind
@@ -551,14 +557,15 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 ** Eldoc
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (setq eldoc-echo-area-prefer-doc-buffer t)
+  (setq eldoc-echo-area-use-mulitline-p nil)
   (global-eldoc-mode 1)
 #+end_src
 
 ** Languages
 *** Latex
-#+begin_src emacs-lisp :tangle init.el 
+#+begin_src emacs-lisp  
 (use-package latex
   :ensure auctex
   :config
@@ -572,19 +579,19 @@ Evil mode needs undo-tree for undo capability
 #+end_src>
 
 *** Rust
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
   (use-package rust-mode
     :ensure t)
   (setq lsp-rust-analyzer-cargo-watch-command "clippy")
 #+end_src
 
 *** ESS
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (use-package ess)
 #+end_src
 
 *** CSV
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp 
 (use-package csv)
 (use-package csv-mode)
 #+end_src
