--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -220,7 +220,7 @@ Evil mode needs undo-tree for undo capability
   (defun set-font-faces()
     (set-face-attribute 'default nil :font "Ubuntu Mono" :weight 'light :height default-font-size)
     (set-face-attribute 'fixed-pitch nil :font "Ubuntu Mono" :weight 'light :height default-font-size)
-    (set-face-attribute 'variable-pitch nil :font "Source Sans Pro" :weight 'normal :height default-font-size))
+    (set-face-attribute 'variable-pitch nil :font "Noto Sans" :weight 'normal :height default-font-size))
 
   (if (daemonp)
       (add-hook 'after-make-frame-functions
@@ -366,7 +366,8 @@ Evil mode needs undo-tree for undo capability
   (use-package org
     :hook (org-mode . org-mode-setup)
     :config
-    (setq org-agenda-files '("~/OrgFiles/CDS.org"
+    (setq org-agenda-files '("~/OrgFiles/Studium.org"
+                             "~/OrgFiles/Personal.org"
                              "~/OrgFiles/Termine.org"))
     (org-font-setup))
 
@@ -395,6 +396,24 @@ Evil mode needs undo-tree for undo capability
     (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
     (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp "))
     (add-to-list 'org-structure-template-alist '("py" . "src python")))
+#+end_src
+
+** Org Roam
+#+begin_src emacs-lisp 
+(use-package org-roam
+  :ensure t
+  :init
+  (setq org-roam-v2-ack t)
+  :custom
+  (org-roam-directory "~/RoamNotes")
+  (org-roam-completion-everywhere t)
+  :bind (("C-c n l" . org-roam-buffer-toggle)
+         ("C-c n f" . org-roam-node-find)
+         ("C-c n i" . org-roam-node-insert)
+         :map org-mode-map
+         ("C-M-i"    . completion-at-point))
+  :config
+  (org-roam-setup))
 #+end_src
 
 * Vterm
