--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -172,7 +172,7 @@
 
 ** Random Keybindings
 #+begin_src emacs-lisp 
-  (global-set-key (kbd "M-n") 'dabbrev-expand)
+  (global-set-key (kbd "M-ä") 'dabbrev-expand)
   (global-set-key (kbd "C-x d") 'ido-dired)
   (global-set-key (kbd "C-x C-f") 'ido-find-file)
   (global-set-key (kbd "C-x c") 'compile)
