--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -72,7 +72,7 @@
 
 ** Line numbers
 #+begin_src emacs-lisp  
-  (global-display-line-numbers-mode t)
+  (global-display-line-numbers-mode)
   (setq display-line-numbers 'relative)
 #+end_src
 
@@ -263,9 +263,7 @@ Evil mode needs undo-tree for undo capability
   (use-package counsel
     :ensure t
     :custom
-    (counsel-linux-app-format-function #'counsel-linux-app-format-function-command-only)
-    :bind  
-    (("M-s f" . 'counsel-fzf)))
+    (counsel-linux-app-format-function #'counsel-linux-app-format-function-command-only))
 #+end_src
 
 * Consult
@@ -288,10 +286,59 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * Completion
-** Company
+** Hippie-expand
 #+begin_src emacs-lisp 
-  (use-package company)
-  (global-company-mode)
+(use-package hippie-exp
+  :bind ([remap dabbrev-expand] . hippie-expand)
+  :commands (hippie-expand)
+  :config
+  (setq hippie-expand-try-functions-list
+        '(try-expand-dabbrev
+          try-expand-dabbrev-all-buffers
+          try-expand-dabbrev-from-kill
+          try-complete-lisp-symbol-partially
+          try-complete-lisp-symbol
+          try-complete-file-name-partially
+          try-complete-file-name
+          try-expand-all-abbrevs
+          try-expand-list
+          try-expand-line)))
+#+end_src
+
+** Corfu
+#+begin_src emacs-lisp 
+  (use-package corfu
+    ;; Optional customizations
+    :custom
+    (corfu-cycle t)                  ; Allows cycling through candidates
+    (corfu-auto t)                   ; Enable auto completion
+    (corfu-auto-prefix 2)            ; Enable auto completion
+    (corfu-auto-delay 0.0)           ; Enable auto completion
+    (corfu-quit-at-boundary 'separator)
+    (corfu-echo-documentation 0.25)   ; Enable auto completion
+    (corfu-preview-current 'insert)   ; Do not preview current candidate
+    (corfu-preselect-first nil)
+
+    ;; Optionally use TAB for cycling, default is `corfu-complete'.
+    :bind (:map corfu-map
+                ("M-SPC" . corfu-insert-separator)
+                ("TAB"     . corfu-next)
+                ([tab]     . corfu-next)
+                ("S-TAB"   . corfu-previous)
+                ([backtab] . corfu-previous)
+                ("S-<return>" . corfu-insert)
+                ("RET"     . nil) ;; leave my enter alone!
+                )
+
+    :init
+    (global-corfu-mode)
+    (corfu-history-mode)
+    :config
+    (add-hook 'eshell-mode-hook
+              (lambda () (setq-local corfu-quit-at-boundary t
+                                     corfu-quit-no-match t
+                                     corfu-auto nil)
+                (corfu-mode))))
 #+end_src
 
 ** Vertico 
@@ -328,12 +375,6 @@ Evil mode needs undo-tree for undo capability
 ** Completion Style
 #+begin_src emacs-lisp 
 (setq completion-styles '(flex))
-#+end_src
-
-** Corfu
-#+begin_src emacs-lisp 
-  (use-package corfu)
-  (global-corfu-mode t)
 #+end_src
 
 * Dired
@@ -537,42 +578,9 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * Text Editing
-** flycheck
+** eglot
 #+begin_src emacs-lisp 
-  (use-package flycheck)
-  (global-flycheck-mode 1)
-#+end_src
-
-** lsp-mode
-#+begin_src emacs-lisp 
-  (use-package lsp-ui
-    :ensure
-    :commands lsp-ui-mode
-    :custom
-    (lsp-ui-peek-always-show t)
-    (lsp-ui-sideline-show-hover t)
-    (lsp-ui-doc-enable nil))
-
-  (use-package lsp-mode
-    :ensure t
-    :commands lsp
-    :custom
-    (lsp-eldoc-render-all t)
-    (lsp-idle-delay 0.6)
-    :hook ((lsp-mode . lsp-enable-which-key-integration))
-    )
-#+end_src
-
-** projectile
-#+begin_src emacs-lisp 
-  (use-package projectile
-    :ensure t
-    :bind
-    :config
-    (define-key 
-      projectile-mode-map
-      (kbd "C-c p")
-      'projectile-command-map))
+  (use-package eglot)
 #+end_src
 
 ** Eldoc
@@ -614,7 +622,6 @@ Evil mode needs undo-tree for undo capability
 (use-package csv)
 (use-package csv-mode)
 #+end_src
-
 
 
 
