--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -72,8 +72,8 @@
 
 ** Line numbers
 #+begin_src emacs-lisp  
-  (global-display-line-numbers-mode)
-  (setq display-line-numbers 'relative)
+  (setq display-line-numbers-type 'relative) 
+  (global-display-line-numbers-mode) 
 #+end_src
 
 ** Spaces instead of tabs
@@ -109,7 +109,7 @@
 
 ** Save-hist
 #+begin_src emacs-lisp 
-  (setq history-length 25)
+  (setq history-length 30)
   (savehist-mode 1)
 #+end_src
 
@@ -173,9 +173,9 @@
 ** Random Keybindings
 #+begin_src emacs-lisp 
   (global-set-key (kbd "M-ä") 'dabbrev-expand)
-  (global-set-key (kbd "C-x d") 'ido-dired)
-  (global-set-key (kbd "C-x C-f") 'ido-find-file)
   (global-set-key (kbd "C-x c") 'compile)
+  (global-set-key (kbd "C-x 4 RET") 'vterm-other-window)
+  (global-set-key (kbd "C-M-i") 'completion-at-point)
 #+end_src
 
 ** No accidental quiting
@@ -185,18 +185,20 @@
 
 * Evil Mode
 #+begin_src emacs-lisp  
-(use-package evil
-    :ensure t
-    :init
-    (setq evil-want-keybinding nil)
-    :config
-    (evil-mode t))
+  (use-package evil
+      :ensure t
+      :init
+      (setq evil-want-keybinding nil)
+      :config
+      (evil-mode t))
 
-(use-package evil-collection
-    :after evil
-    :ensure t
-    :config
-    (evil-collection-init))
+  (use-package evil-collection
+      :after evil
+      :ensure t
+      :config
+      (evil-collection-init))
+
+  (setq evil-want-minibuffer t)
 #+end_src
 
 ** Undo-Tree
@@ -258,7 +260,13 @@ Evil mode needs undo-tree for undo capability
   (setq display-time-24hr-format t)
 #+end_src
 
-* Counsel
+* Completion
+** Semantic mode
+#+begin_src emacs-lisp 
+(semantic-mode)
+#+end_src
+
+** Counsel
 #+begin_src emacs-lisp 
   (use-package counsel
     :ensure t
@@ -266,13 +274,11 @@ Evil mode needs undo-tree for undo capability
     (counsel-linux-app-format-function #'counsel-linux-app-format-function-command-only))
 #+end_src
 
-* Consult
+** Consult
 #+begin_src emacs-lisp 
   (use-package consult
     :bind
-    (("C-x b" . consult-buffer)
-     ("C-x C-b" . consult-buffer)
-     ;; M-s bindings (search-map)
+    (;; M-s bindings (search-map)
      ("M-s d" . consult-find)
      ("M-s D" . consult-locate)
      ("M-s g" . consult-grep)
@@ -284,25 +290,25 @@ Evil mode needs undo-tree for undo capability
      ("M-s k" . consult-keep-lines)
      ("M-s u" . consult-focus-lines)))
 #+end_src
-
-* Completion
+   
 ** Hippie-expand
 #+begin_src emacs-lisp 
-(use-package hippie-exp
-  :bind ([remap dabbrev-expand] . hippie-expand)
-  :commands (hippie-expand)
-  :config
-  (setq hippie-expand-try-functions-list
-        '(try-expand-dabbrev
-          try-expand-dabbrev-all-buffers
-          try-expand-dabbrev-from-kill
-          try-complete-lisp-symbol-partially
-          try-complete-lisp-symbol
-          try-complete-file-name-partially
-          try-complete-file-name
-          try-expand-all-abbrevs
-          try-expand-list
-          try-expand-line)))
+  (use-package hippie-exp
+    :bind ([remap dabbrev-expand] . hippie-expand)
+    :commands (hippie-expand)
+    :config
+    (setq hippie-expand-try-functions-list
+          '(try-expand-dabbrev
+            try-expand-dabbrev-all-buffers
+            try-expand-dabbrev-from-kill
+            try-expand-whole-kill
+            try-complete-lisp-symbol-partially
+            try-complete-lisp-symbol
+            try-complete-file-name-partially
+            try-complete-file-name
+            try-expand-all-abbrevs
+            try-expand-list
+            try-expand-line)))
 #+end_src
 
 ** Corfu
@@ -366,15 +372,41 @@ Evil mode needs undo-tree for undo capability
 
 ** Marginalia
 #+begin_src emacs-lisp 
-(use-package marginalia
-  :ensure t
-  :config
-  (marginalia-mode))
+  (use-package marginalia
+    :ensure t
+    :custom 
+    (marginalia-annotators '(marginalia-annotators-heavy marginalia-annotators-light nil))
+    :config
+    (marginalia-mode))
 #+end_src
 
 ** Completion Style
 #+begin_src emacs-lisp 
-(setq completion-styles '(flex))
+(setq completion-styles '(orderless))
+#+end_src
+
+* Embark
+#+begin_src emacs-lisp 
+  (use-package embark
+    :ensure t
+    :bind
+    (("s-." . embark-act)         ;; pick some comfortable binding
+     ("s-;" . embark-dwim)        ;; good alternative: M-.
+     ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
+    :init
+    (setq prefix-help-command #'embark-prefix-help-command)
+    :config
+    (add-to-list 'display-buffer-alist
+                 '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
+                   nil
+                   (window-parameters (mode-line-format . none)))))
+
+  (use-package embark-consult
+    :ensure t
+    :after (embark consult)
+    :demand t 
+    :hook
+    (embark-collect-mode . consult-preview-at-point-mode))
 #+end_src
 
 * Dired
@@ -441,20 +473,36 @@ Evil mode needs undo-tree for undo capability
 
 ** Org Roam
 #+begin_src emacs-lisp 
-(use-package org-roam
-  :ensure t
-  :init
-  (setq org-roam-v2-ack t)
-  :custom
-  (org-roam-directory "~/RoamNotes")
-  (org-roam-completion-everywhere t)
-  :bind (("C-c n l" . org-roam-buffer-toggle)
-         ("C-c n f" . org-roam-node-find)
-         ("C-c n i" . org-roam-node-insert)
-         :map org-mode-map
-         ("C-M-i"    . completion-at-point))
-  :config
-  (org-roam-setup))
+  (use-package org-roam
+    :ensure t
+    :init
+    (setq org-roam-v2-ack t)
+    :custom
+    (org-roam-directory "~/RoamNotes")
+    (org-roam-completion-everywhere t)
+    :bind (("C-c n l" . org-roam-buffer-toggle)
+           ("C-c n f" . org-roam-node-find)
+           ("C-c n i" . org-roam-node-insert)
+           :map org-mode-map
+           ("C-M-i"    . completion-at-point))
+    :config
+    (org-roam-setup))
+
+  (use-package websocket
+    :after org-roam)
+
+  (use-package org-roam-ui
+    :after org-roam 
+    ;; or :after org
+    ;; normally we'd recommend hooking orui after org-roam, but since org-roam does not have
+    ;; a hookable mode anymore, you're advised to pick something yourself
+    ;; if you don't care about startup time, use
+    ;; :hook (after-init . org-roam-ui-mode)
+    :config
+    (setq org-roam-ui-sync-theme t
+          org-roam-ui-follow t
+          org-roam-ui-update-on-save t
+          org-roam-ui-open-on-start t))
 #+end_src
 
 * Vterm
@@ -486,46 +534,14 @@ Evil mode needs undo-tree for undo capability
           fzf/window-height 10))
 #+end_src
 
-* Embark
-#+begin_src emacs-lisp 
-  (use-package embark
-    :ensure t
-    :bind
-    (("s-." . embark-act)         ;; pick some comfortable binding
-     ("s-;" . embark-dwim)        ;; good alternative: M-.
-     ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
-    :init
-    (setq prefix-help-command #'embark-prefix-help-command)
-    :config
-    (add-to-list 'display-buffer-alist
-                 '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
-                   nil
-                   (window-parameters (mode-line-format . none)))))
-
-  (use-package embark-consult
-    :ensure t
-    :after (embark consult)
-    :demand t 
-    :hook
-    (embark-collect-mode . consult-preview-at-point-mode))
-#+end_src
-
 * EXWM
 #+begin_src emacs-lisp  
   (start-process-shell-command "xrandr" nil "")
-
-  (use-package counsel
-    ;; EXWM easy app launching
-    :custom
-    (counsel-linux-app-format-function #'counsel-linux-app-format-function-command-only))
 
   (use-package exwm
     :config
     ;; Set the default number of workspaces
     (setq exwm-workspace-number 10)
-
-    ;; When window "class" updates, use it to set the buffer name
-    ;; (add-hook 'exwm-update-class-hook #'efs/exwm-update-class)
 
     ;; These keys should always pass through to Emacs
     (setq exwm-input-prefix-keys
@@ -573,8 +589,8 @@ Evil mode needs undo-tree for undo capability
 
   (exwm-input-set-key (kbd "s-SPC") 'counsel-linux-app)
 
-  (setq exwm-workspace-show-all-buffers 1)
   (setq exwm-layout-show-all-buffers t)
+  (setq exwm-workspace-show-all-buffers 1)
 #+end_src
 
 * Text Editing
@@ -622,7 +638,6 @@ Evil mode needs undo-tree for undo capability
 (use-package csv)
 (use-package csv-mode)
 #+end_src
-
 
 
 *** Python
