--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -594,6 +594,13 @@ Evil mode needs undo-tree for undo capability
 #+end_src
 
 * Text Editing
+** Paredit
+#+begin_src emacs-lisp 
+(use-package paredit)
+(use-package evil-paredit)
+(use-package paredit-everywhere)
+#+end_src
+
 ** eglot
 #+begin_src emacs-lisp 
   (use-package eglot)
@@ -643,4 +650,17 @@ Evil mode needs undo-tree for undo capability
 *** Python
 #+begin_src emacs-lisp 
 (use-package ein)
+#+end_src
+
+** Tree-sitter
+#+begin_src emacs-lisp 
+  (use-package tree-sitter
+    :ensure t
+    :after tree-sitter-langs
+    :config
+    (global-tree-sitter-mode)
+    (add-hook 'tree-sitter-after-on-hook #'tree-sitter-hl-mode))
+  (use-package tree-sitter-langs)
+  (use-package tree-sitter-indent)
+  (use-package evil-textobj-tree-sitter)
 #+end_src
