--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -636,6 +636,8 @@ Evil mode needs undo-tree for undo capability
   (setq TeX-auto-save t)
   (setq TeX-parse-self t))
 
+(setq org-format-latex-options (plist-put org-format-latex-options :scale 2.4))
+(setq org-preview-latex-default-process 'dvipng)
 (setq-default TeX-master nil)
 (setq TeX-show-compilation nil)
 (use-package company-auctex)
