Reverted Browser settings.

--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -67,7 +67,7 @@
         browse-url-generic-program 'browse-url-firefox
         browse-url-new-window-flag t 
         browse-url-firefox-new-window-is-tab nil)
-  (setq browse-url-firefox-arguments '("-P" "test_profile" "-new-instance"))
+  (setq browse-url-firefox-arguments nil)
 #+end_src
 
 ** PDF tools
