--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -91,6 +91,7 @@
 ** Minibuffers
 #+begin_src emacs-lisp 
   (setq enable-recursive-minibuffers t)
+  (setq max-mini-window-height 0.35)
 #+end_src
 
 ** Stay keyboard driven
@@ -188,16 +189,6 @@
 * Key bindings
 ** Window manipulation
 #+begin_src emacs-lisp 
-  (global-set-key (kbd "C-S-h") 'windmove-swap-states-left)
-  (global-set-key (kbd "C-S-j") 'windmove-swap-states-down)
-  (global-set-key (kbd "C-S-k") 'windmove-swap-states-up)
-  (global-set-key (kbd "C-S-l") 'windmove-swap-states-right)
-  
-  (global-set-key (kbd "s-l") 'windmove-right)
-  (global-set-key (kbd "s-k") 'windmove-up)
-  (global-set-key (kbd "s-j") 'windmove-down)
-  (global-set-key (kbd "s-h") 'windmove-left)
-
   (global-set-key (kbd "C-s-j") (lambda() (interactive) (shrink-window-horizontally 8)))
   (global-set-key (kbd "C-s-k") (lambda() (interactive) (enlarge-window-horizontally 8)))
   (global-set-key (kbd "C-s-+") (lambda() (interactive) (enlarge-window 4)))
@@ -322,13 +313,12 @@ Evil mode needs undo-tree for undo capability
 ** Modeline
 #+begin_src emacs-lisp  
   (use-package doom-modeline
-  :init (doom-modeline-mode 1)
-  :custom ((doom-modeline-height 18)))
+  :custom ((doom-modeline-height 8)))
 
   (add-hook 'after-init-hook 'doom-modeline-mode)
 
   ;; doom-modeline configuration
-  (customize-set-variable 'doom-modeline-height 15)
+  (customize-set-variable 'doom-modeline-height 8)
   (customize-set-variable 'doom-modeline-bar-width 6)
   (customize-set-variable 'doom-modeline-minor-modes nil)
   (customize-set-variable 'doom-modeline-buffer-file-name-style 'truncate-except-project)
